--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,8 @@ body {
     background-color: #292929;
     overflow: hidden;
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     body {
         margin: 16px;
     }
@@ -222,14 +222,16 @@ nav a:nth-child(4):hover~#indicator {
     padding-left: 50px;
     padding-top: 30px;
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .image1 {
-        float:none;
-        width:350px;
-        height:350px;
-        padding-left:0px;
-        padding-right:0px;
+        padding-top: 10px;
+        float: none;
+        width: 350px;
+        height: 350px;
+        padding-left: 0px;
+        padding-right: 0px;
+
     }
 
 }
@@ -241,17 +243,18 @@ nav a:nth-child(4):hover~#indicator {
 
     padding-top: 30px;
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .image2 {
         float: none;
-        width:350px;
-        height:350px;
-        margin-right:0px;
-        
-        
+        width: 350px;
+        height: 350px;
+        margin-right: 0px;
+        padding-top: 10px;
+
     }
 }
+
 .title1 {
     padding-top: 30px;
     font-size: 30px;
@@ -260,10 +263,10 @@ nav a:nth-child(4):hover~#indicator {
     text-align: center;
     padding-bottom: 20px;
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .title1 {
-        text-align:center;
+        text-align: center;
         margin-left: 0px;
         margin-right: 40px;
     }
@@ -277,12 +280,13 @@ nav a:nth-child(4):hover~#indicator {
     text-align: center;
     padding-bottom: 20px;
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .title2 {
-        text-align:center;
+        text-align: center;
         margin-left: 0px;
         margin-right: 40px;
+        padding-top: 0px;
     }
 }
 
@@ -296,16 +300,17 @@ nav a:nth-child(4):hover~#indicator {
     padding-right: 190px;
 
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .wrapper1 {
-        text-align:center;
+        font-size: 20px;
+        text-align: center;
         margin-left: 0px;
-        margin-right:40px;
-        margin-left:0px;
-        padding-right:0px;
-        margin-top:0px;
-        padding-bottom:0px;
+        margin-right: 40px;
+        margin-left: 0px;
+        padding-right: 0px;
+        margin-top: 0px;
+        padding-bottom: 10px;
 
     }
 }
@@ -321,16 +326,17 @@ nav a:nth-child(4):hover~#indicator {
     padding-right: 190px;
 
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .wrapper2 {
-        text-align:center;
+        font-size: 20px;
+        text-align: center;
         margin-left: 0px;
-        margin-right:40px;
-        margin-left:0px;
-        padding-right:0px;
-        margin-top:0px;
-        padding-bottom:0px;
+        margin-right: 40px;
+        margin-left: 0px;
+        padding-right: 0px;
+        margin-top: 0px;
+        padding-bottom: 10px;
     }
 }
 
@@ -342,11 +348,11 @@ nav a:nth-child(4):hover~#indicator {
     text-align: center;
     padding-bottom: 20px;
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .title3 {
-        text-align:center;
-    
+        text-align: center;
+        padding-top:0px;
         margin-left: 0px;
     }
 }
@@ -357,12 +363,13 @@ nav a:nth-child(4):hover~#indicator {
 
 
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .wrapper3 {
-        text-align:center;
-    
+        text-align: center;
+
         margin-left: 0px;
+        padding-bottom:16px;
     }
 }
 
@@ -372,14 +379,12 @@ nav a:nth-child(4):hover~#indicator {
     margin-left: 50px;
     margin-right: 50px;
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .line1 {
-        padding-top: 30px;
-        border-bottom: 2px solid rgba(255, 0, 0, 0.3);
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom:5px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        padding-top: 0px;
 
     }
 }
@@ -390,14 +395,12 @@ nav a:nth-child(4):hover~#indicator {
     margin-left: 50px;
     margin-right: 50px;
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .line2 {
-        padding-top: 30px;
-        border-bottom: 2px solid rgba(255, 0, 0, 0.3);
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom:5px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        padding-top: 0px;
 
     }
 }
@@ -408,14 +411,12 @@ nav a:nth-child(4):hover~#indicator {
     margin-left: 50px;
     margin-right: 50px;
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .line3 {
-        padding-top: 30px;
-        border-bottom: 2px solid rgba(255, 0, 0, 0.3);
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom:5px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        padding-top: 0px;
 
     }
 }
@@ -424,6 +425,14 @@ nav a:nth-child(4):hover~#indicator {
     border-bottom: 2px solid rgba(255, 0, 0, 0.3);
     padding-top: 20px;
     align-self: center;
+}
+@media screen and (max-width: 700px) {
+    .line4 {
+        margin-top: 0px;
+        margin-bottom: 10px;
+        padding-top: 0px;
+
+    }
 }
 
 .line5 {
@@ -440,6 +449,15 @@ nav a:nth-child(4):hover~#indicator {
     padding-top: 30px;
     align-self: center;
 }
+@media screen and (max-width: 700px) {
+    .line7 {
+        padding-top: 16px;
+        margin-top: 0px;
+        margin-bottom: 10px;
+
+
+    }
+}
 
 .line8 {
 
@@ -447,6 +465,15 @@ nav a:nth-child(4):hover~#indicator {
     padding-top: 35px;
     margin-bottom: 0px;
     align-self: center;
+}
+
+@media screen and (max-width: 700px) {
+    .line8 {
+        margin-top: 16px;
+        margin-bottom: 16px;
+        padding-top: 0px;
+
+    }
 }
 
 .line9 {
@@ -463,6 +490,14 @@ nav a:nth-child(4):hover~#indicator {
     padding-top: 35px;
     margin-bottom: 30px;
     align-self: center;
+}
+@media screen and (max-width: 700px) {
+    .line10 {
+        
+        padding-top: 16px;
+        margin-bottom:0px;
+
+    }
 }
 
 .line6 {
@@ -601,17 +636,32 @@ li {
 }
 
 .carousel {
+
     position: relative;
     padding-top: 75%;
     filter: drop-shadow(0 0 10px #0003);
     perspective: 100px;
 }
 
+@media screen and (max-width: 700px) {
+    .carousel {
+        width: 100%;
+        height: auto;
+    }
+}
+
+
 .carousel2 {
     position: relative;
     padding-top: 75%;
     filter: drop-shadow(0 0 10px #0003);
     perspective: 100px;
+}
+@media screen and (max-width: 700px) {
+    .carousel2 {
+        width: 100%;
+        height: auto;
+    }
 }
 
 .carousel__viewport {
@@ -639,6 +689,14 @@ li {
     width: 100%;
     height: 100%;
 }
+@media screen and (max-width: 700px) {
+    .carousel__slide img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
 
 .carousel__snapper {
     position: absolute;
@@ -750,15 +808,31 @@ li {
 .image5 {
     float: right;
     margin-top: 30px;
+    width:300px;
+    height:300px;
 
+}
+@media screen and (max-width: 700px) {
+    .image5 {
+        width: 100%;
+        height: auto;
+        margin-top:0px;
+    }
 }
 
 .image6 {
     float: right;
-
+    width:300px;
+    height:300px;
     margin-top: 30px;
 }
-
+@media screen and (max-width: 700px) {
+    .image6 {
+        width: 100%;
+        height: auto;
+        margin-top:16px;
+    }
+}
 .title4 {
 
     font-size: 25px;
@@ -766,6 +840,11 @@ li {
     padding-top: 60px;
     text-align: center;
     padding-bottom: 20px;
+}
+@media screen and (max-width: 700px) {
+    .title4 {
+        padding-top:0px;
+    }
 }
 
 .title5 {
@@ -776,6 +855,11 @@ li {
     text-align: center;
     padding-bottom: 20px;
 }
+@media screen and (max-width: 700px) {
+    .title5 {
+        padding-top:16px;
+    }
+}
 
 .section {
     display: grid;
@@ -784,10 +868,10 @@ li {
     margin: 0px auto 0;
     justify-items: right;
 }
-@media screen and (max-width: 700px)
-{
+
+@media screen and (max-width: 700px) {
     .section {
-        display:block;
+        display: block;
 
     }
 }
@@ -806,12 +890,32 @@ li {
     padding-bottom: 20px;
 }
 
+@media screen and (max-width: 700px) {
+    .htitle {
+        padding-top: 0px;
+        margin-left: 0px;
+        margin-top: -10px;
+
+
+    }
+}
+
 .hwrapper {
     font-size: 25px;
     color: lightgray;
     max-width: 1200px;
     text-align: center;
 
+}
+
+@media screen and (max-width: 700px) {
+    .hwrapper {
+        font-size: 20px;
+        text-align: center;
+        padding-bottom: 10px;
+
+
+    }
 }
 
 .contain {
@@ -826,15 +930,29 @@ li {
 
     margin-top: 40px;
 }
-.row
-{
-    display:grid; 
-    grid-template-columns: 1fr 1fr 1fr; 
+
+@media screen and (max-width: 700px) {
+    .image7 {
+        margin-right: 0px;
+        margin-left: 0px;
+
+        margin-top: 0px;
+        width: 350px;
+        height: 350px;
+        padding-top: 10px;
+
+
+    }
 }
-@media screen and (max-width: 700px)
-{
-    .row{
-        display:grid; 
-    grid-template-columns: 1fr; 
+
+.row {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+@media screen and (max-width: 700px) {
+    .row {
+        display: grid;
+        grid-template-columns: 1fr;
     }
 }
