--- a/styles.css
+++ b/styles.css
@@ -488,7 +488,7 @@ nav a:nth-child(4):hover~#indicator {
     .line8 {
         padding-top: 16px;
         padding-bottom: 16px;
-        padding-top: 0px;
+        
 
     }
 }
@@ -514,6 +514,23 @@ nav a:nth-child(4):hover~#indicator {
 
         padding-top: 16px;
         margin-bottom: 0px;
+
+    }
+}
+.line11 {
+
+    border-bottom: 2px solid rgba(255, 0, 0, 0.3);
+    padding-top: 35px;
+    margin-bottom: 30px;
+    align-self: center;
+}
+@media screen and (max-width: 700px) {
+    .line11 {
+        padding-top: 0px;
+        
+        margin-bottom: 0px;
+        padding-bottom:16px;
+
 
     }
 }
