--- a/styles.css
+++ b/styles.css
@@ -219,14 +219,16 @@ nav a:nth-child(4):hover~#indicator {
 
 .line {
     border-bottom: 2px solid rgba(255, 0, 0, 0.615);
+    margin-bottom:20px;
 }
 
 .image1 {
     float: right;
+    justify-self: center;
 
-    margin-right: 50px;
+    /*margin-right: 50px;
     padding-left: 50px;
-    padding-top: 30px;
+    padding-top: 30px;*/
 }
 
 @media screen and (max-width: 700px) {
@@ -238,16 +240,20 @@ nav a:nth-child(4):hover~#indicator {
         padding-left: 0px;
         padding-right: 0px;
 
+
     }
 
 }
 
 .image2 {
+    justify-self: center;
+    /*
     float: right;
 
     margin-right: 50px;
 
     padding-top: 30px;
+    */
 }
 
 @media screen and (max-width: 700px) {
@@ -300,15 +306,20 @@ padding-bottom: 0px;
 }
 
 .wrapper1 {
-    font-size: 25px;
-    color: lightgray;
-    margin-right: 150px;
-    margin-left: 50px;
-    margin-top: 20px;
-    padding-bottom: 35px;
-    padding-right: 190px;
+    
+    
+        font-size: 25px;
+        color: lightgray;
+        text-align: center;
+        /* margin-right: 150px; */
+        /* margin-left: 50px; */
+        /* margin-top: 20px; */
+        /* padding-bottom: 35px; */
+        /* padding-right: 190px; */
+    }
+    
 
-}
+
 
 @media screen and (max-width: 700px) {
     .wrapper1 {
@@ -328,11 +339,13 @@ padding-bottom: 0px;
 .wrapper2 {
     font-size: 25px;
     color: lightgray;
+    text-align:center;
+    /*
     margin-right: 150px;
     margin-left: 50px;
     margin-top: 20px;
     padding-bottom: 35px;
-    padding-right: 190px;
+    padding-right: 190px;*/
 
 }
 
@@ -490,7 +503,7 @@ padding-top: 0px;
 .line8 {
 
     border-bottom: 2px solid rgba(255, 0, 0, 0.3);
-    padding-top: 35px;
+    padding-top: 16px;
     margin-bottom: 0px;
     align-self: center;
 }
@@ -553,7 +566,7 @@ padding-top: 0px;
 
     border-bottom: 2px solid rgba(255, 0, 0, 0.3);
     padding-top: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     align-self: center;
 }
 
@@ -563,6 +576,95 @@ padding-top: 0px;
 
         margin-bottom: 10px;
         padding-bottom: 16px;
+
+
+    }
+}
+.line13 {
+
+    border-bottom: 2px solid rgba(255, 0, 0, 0.3);
+    padding-top: 16px;
+    margin-bottom: 30px;
+    align-self: center;
+}
+
+@media screen and (max-width: 700px) {
+    .line13 {
+        padding-top: 0px;
+
+        margin-bottom: 10px;
+        padding-bottom: 16px;
+
+
+    }
+}
+.line14 {
+
+    border-bottom: 2px solid rgba(255, 0, 0, 0.3);
+    padding-top: 16px;
+   
+    align-self: center;
+}
+
+@media screen and (max-width: 700px) {
+    .line14 {
+
+        padding-top: 16px;
+        margin-bottom: 0px;
+
+    }
+}
+.line15 {
+
+    border-bottom: 2px solid rgba(255, 0, 0, 0.3);
+    padding-top: 32px;
+    margin-bottom: 0px;
+    align-self: center;
+}
+
+@media screen and (max-width: 700px) {
+    .line15 {
+        padding-top: 16px;
+        
+
+
+
+    }
+}
+.line16 {
+
+    border-bottom: 2px solid rgba(255, 0, 0, 0.3);
+    padding-top: 32px;
+    margin-bottom:32px;
+    
+    align-self: center;
+}
+
+@media screen and (max-width: 700px) {
+    .line16 {
+        padding-top: 16px;
+        padding-bottom:0px;
+        margin-bottom:0px;
+
+
+
+    }
+}
+.line17 {
+
+    border-bottom: 2px solid rgba(255, 0, 0, 0.3);
+    padding-top: 32px;
+    
+    
+    align-self: center;
+}
+
+@media screen and (max-width: 700px) {
+    .line17 {
+        padding-top: 16px;
+        padding-bottom:0px;
+        margin-bottom:0px;
+
 
 
     }
@@ -763,7 +865,7 @@ li {
 
 .carousel__slide img {
     width: 100%;
-    height: 100%;
+    height: auto%;
 }
 
 @media screen and (max-width: 700px) {
@@ -885,8 +987,9 @@ li {
 .image5 {
     float: right;
     margin-top: 30px;
-    width: 300px;
-    height: 300px;
+    width: 384px;
+    height: 273px;
+    object-fit: cover;
 
 }
 
@@ -900,9 +1003,10 @@ li {
 
 .image6 {
     float: right;
-    width: 300px;
-    height: 300px;
+    width: 384px;
+    height: 273px;
     margin-top: 30px;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 700px) {
@@ -957,10 +1061,40 @@ li {
         padding-top: 16px;
     }
 }
+.title6 {
+
+    font-size: 25px;
+    color: lightgray;
+    padding-top: 10px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+@media screen and (max-width: 700px) {
+    .title6 {
+        text-align: center;
+        padding-top: 0px;
+        margin-left: 0px;
+    }
+}
+
+.title7 {
+
+    font-size: 25px;
+    color: lightgray;
+    padding-top: 30px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+@media screen and (max-width: 700px) {
+    .title7 {
+        padding-top: 10px;
+    }
+}
 
 .section {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+  
     box-sizing: border-box;
     margin: 0px auto 0;
     justify-items: right;
@@ -1063,6 +1197,7 @@ li {
 .row {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-gap:16px;
 
 }
 
