--- a/styles.css
+++ b/styles.css
@@ -269,7 +269,7 @@ nav a:nth-child(4):hover~#indicator {
 
 .title1 {
     padding-top: 30px;
-    font-size: 30px;
+    font-size: 25px;
     color: lightgray;
     margin-left: 50px;
     text-align: center;
@@ -287,7 +287,7 @@ nav a:nth-child(4):hover~#indicator {
 
 .title2 {
     padding-top: 30px;
-    font-size: 30px;
+    font-size: 25px;
     color: lightgray;
     margin-left: 50px;
     text-align: center;
@@ -308,11 +308,11 @@ padding-bottom: 0px;
 .wrapper1 {
     
     
-        font-size: 25px;
+        font-size: 20px;
         color: lightgray;
         text-align: center;
         /* margin-right: 150px; */
-        /* margin-left: 50px; */
+        margin-left: 50px; 
         /* margin-top: 20px; */
         /* padding-bottom: 35px; */
         /* padding-right: 190px; */
@@ -337,12 +337,13 @@ padding-bottom: 0px;
 
 
 .wrapper2 {
-    font-size: 25px;
+    font-size: 20px;
     color: lightgray;
     text-align:center;
+    margin-left: 50px;
     /*
     margin-right: 150px;
-    margin-left: 50px;
+
     margin-top: 20px;
     padding-bottom: 35px;
     padding-right: 190px;*/
@@ -413,7 +414,8 @@ padding-bottom: 0px;
 }
 
 .line1 {
-    padding-top: 60px;
+    padding-top: 30px;
+    margin-bottom: 30px;
     border-bottom: 2px solid rgba(255, 0, 0, 0.3);
     margin-left: 50px;
     margin-right: 50px;
